--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "js-training",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production roma=beer vita=pizza  node server.js",
-    "dev": "cross-env roma=beer vita=pizza NODE_ENV=development nodemon server.js"
+    "start": "cross-env NODE_ENV=production node backend/server.js",
+    "server": "cross-env NODE_ENV=development nodemon backend/server.js",
+    "client": "npm start --prefix frontend"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,10 @@
   "dependencies": {
     "colors": "^1.4.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^6.5.0",
     "nodemon": "^2.0.19"
   }
 }
