--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "express-handlebars": "^6.0.6",
+    "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19"
   }
 }
